--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,11 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  provider: ^6.1.1
+  intl: ^0.17.0
   flutter:
     sdk: flutter
+  
 
 
   # The following adds the Cupertino Icons font to your application.
